tests/ui/auto_plugin_already_registered.stderr
error: plugin already registered above, move plugin fn to the bottom of the file
 --> tests/ui/auto_plugin_already_registered.rs:8:1
  |
8 | #[auto_register_type]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `auto_register_type` (in Nightly builds, run with -Z macro-backtrace for more info)
